# opencode-config

./: .gitignore  AGENTS.md  README.md
deploy/: ai-opencode-server.krypton.service  ai.opencode.server.argon.plist  (+5 more)
skills/servarr/: AGENTS.md  README.md  SKILL.md  pyproject.toml  server.py
skills/servarr/.snapshots/cloudflare-access/: app-7e484962-8ac9-4c5c-a5bc-c2e0789c3ee5-deleted-20260612-160949.json  app-a1b85db0-8f6e-48d0-9b5d-092ed2ef1f86-updated-20260612-154959.json  app-a1b85db0-8f6e-48d0-9b5d-092ed2ef1f86-updated-20260612-155131.json  app-a33cf1a7-87c3-4b6d-b669-df06318d4657-deleted-20260605-001719.json  apps-20260604-220440.json  apps-20260606-225118.json  apps-20260613-115139.json  apps-before-v1-bypass-20260613-125338.json
skills/servarr/.snapshots/cloudflare-ingress/: 18629d3c-e9d5-4ce3-945d-0a41fb3f4b9c-20260604-224937.json  18629d3c-e9d5-4ce3-945d-0a41fb3f4b9c-20260613-125030.json  18629d3c-e9d5-4ce3-945d-0a41fb3f4b9c-20260613-125153.json
skills/servarr/.snapshots/cloudflare-ruleset/: http_request_firewall_custom-20260612-162141.json  http_request_firewall_custom-20260612-162208.json  http_request_firewall_custom-20260612-163110.json
skills/servarr/.snapshots/npm-host/: 44-20260607-003357.json  50-20260604-235542.json  50-20260604-235645.json  50-20260604-235701.json
skills/servarr/references/: manifest.md  new-service.md  safety.md
skills/servarr/servarr/: __init__.py  __main__.py  _impl.py  _safe.py  _shim.py  cli.py  cloudflare.py  containers.py  ha.py  hosts.py  infra.py  npm.py  provision.py  provisioning.py  secrets.py  services.py
(+15 files in other folders)
